feat: Replace sphere with profile picture and add Vercel config

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Harshad's-Portfolio</title>
-    <meta name="description" content="A showcase of my projects, skills, and professional achievements as a developer." />
-    <meta name="keywords" content="developer, certifications, portfolio, skills, programming" />
+    <title>Harshad Nikam — Portfolio</title>
+    <meta name="description" content="Harshad Nikam — MERN + AI student developer. Projects, skills, and contact." />
+    <meta name="keywords" content="Harshad, Harshad Nikam, MERN, React, Node, MongoDB, portfolio, developer" />
+    <meta name="theme-color" content="#0b0b10" />
+    <meta property="og:title" content="Harshad Nikam — Portfolio" />
+    <meta property="og:description" content="MERN + AI student developer. Projects, skills, and contact." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Harshad Nikam — Portfolio" />
+    <meta name="twitter:description" content="MERN + AI student developer. Projects, skills, and contact." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
