--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:title" content="Harshad Nikam — Portfolio" />
     <meta name="twitter:description" content="MERN + AI student developer. Projects, skills, and contact." />
     <meta name="twitter:image" content="/og-image.png" />
-    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data: https://via.placeholder.com https://*.cloudinary.com">
+    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:">
   </head>
   <body>
     <div id="root"></div>
