--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:title" content="Harshad Nikam — Portfolio" />
     <meta name="twitter:description" content="MERN + AI student developer. Projects, skills, and contact." />
     <meta name="twitter:image" content="/og-image.png" />
-    <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: blob: https://*.cloudinary.com; connect-src 'self' https://*.cloudinary.com">
   </head>
   <body>
     <div id="root"></div>
