--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
     <meta name="twitter:title" content="Harshad Nikam — Portfolio" />
     <meta name="twitter:description" content="MERN + AI student developer. Projects, skills, and contact." />
     <meta name="twitter:image" content="/og-image.png" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: blob: https://*.cloudinary.com; connect-src 'self' https://*.cloudinary.com">
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel.live https://*.vercel.app;
+      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: blob: https://*.cloudinary.com https://res.cloudinary.com;
+      connect-src 'self' https://*.vercel.live https://*.vercel.app https://*.cloudinary.com;
+      font-src 'self';
+      object-src 'none';
+      base-uri 'self';
+      form-action 'self';
+      frame-ancestors 'none';
+      media-src 'self';
+      frame-src 'self'">
   </head>
   <body>
     <div id="root"></div>
