--- a/index.html
+++ b/index.html
@@ -16,19 +16,7 @@
     <meta name="twitter:title" content="Harshad Nikam — Portfolio" />
     <meta name="twitter:description" content="MERN + AI student developer. Projects, skills, and contact." />
     <meta name="twitter:image" content="/og-image.png" />
-    <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel.live https://*.vercel.app;
-      style-src 'self' 'unsafe-inline';
-      img-src 'self' data: blob: https://*.cloudinary.com https://res.cloudinary.com;
-      connect-src 'self' https://*.vercel.live https://*.vercel.app https://*.cloudinary.com;
-      font-src 'self';
-      object-src 'none';
-      base-uri 'self';
-      form-action 'self';
-      frame-ancestors 'none';
-      media-src 'self';
-      frame-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel.live https://*.vercel.app; img-src 'self' data: https://res.cloudinary.com https://*.cloudinary.com/; script-src-elem 'self' 'unsafe-inline' https://*.vercel.live https://*.vercel.app">
   </head>
   <body>
     <div id="root"></div>
