--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:title" content="Harshad Nikam — Portfolio" />
     <meta name="twitter:description" content="MERN + AI student developer. Projects, skills, and contact." />
     <meta name="twitter:image" content="/og-image.png" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.vercel.live https://*.vercel.app; img-src 'self' data: https://res.cloudinary.com https://*.cloudinary.com/; script-src-elem 'self' 'unsafe-inline' https://*.vercel.live https://*.vercel.app">
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: blob: 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval';">
   </head>
   <body>
     <div id="root"></div>
